all apis created backend almost complete

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,4 @@ MONGO_URL = mongodb+srv://AdityaJaiswal:54321%40aytida.blogdb@blogdatabase.wtan3
 JWT_SECRET_KEY = adi123
 JWT_REFRESH_SECRET_KEY =adi123
 DB_NAME = blogdatabase 
+COMPANY_EMAIL = anime.vbh@gmail.com
