--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,11 @@
+MONGO_URL = mongodb+srv://AdityaJaiswal:54321%40aytida.blogdb@blogdatabase.wtan3xv.mongodb.net/
+JWT_SECRET_KEY = adi123
+JWT_REFRESH_SECRET_KEY =adi123
+DB_NAME = blogdatabase 
+COMPANY_EMAIL = anime.vbh@gmail.com
 
+CLOUDINARY_CLOUD_NAME= dezjath7m
+	
+CLOUDINARY_API_KEY = 561319965951145
+
+CLOUDINARY_API_SECRET = nr188vhPqzRQkdOaH8T8ttGxdGQ
